solve jar not find issue by make maven dependency no provide